perf: add a resolve benchmark (#554)